@startuml SIRH_Domain
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #333333

class Employee {
    -id: String
    -email: String
    -nom: String
    -prenom: String
    -dateEmbauche: Date
    -soldeCongePayes: Number
    -soldeRTT: Number
    +getId(): String
    +getEmail(): String
    +deduireCongePayes(jours: Number): void
    +deduireRTT(jours: Number): void
    +ajouterCongePayes(jours: Number): void
    +ajouterRTT(jours: Number): void
}

class Conge {
    -id: String
    -type: TypeConge
    -dateDebut: Date
    -dateFin: Date
    -nombreJour: Number
    -motif: String
    -statut: StatutConge
    -employeeId: String
    +getId(): String
    +getType(): TypeConge
    +getStatut(): StatutConge
    +approuver(): void
    +rejeter(): void
    +annuler(): void
    +isApprouve(): Boolean
}

class DemandeConge {
    -id: String
    -employeeId: String
    -congeId: String
    -statutDemande: StatutDemande
    -commentaire: String
    +getId(): String
    +getStatutDemande(): StatutDemande
    +validerParManager(commentaire: String): void
    +transmettreRH(): void
    +validerParRH(commentaire: String): void
    +rejeter(commentaire: String): void
    +isApprouveeFinalement(): Boolean
}

class Periode <<ValueObject>> {
    -dateDebut: Date
    -dateFin: Date
    +getDateDebut(): Date
    +getDateFin(): Date
    +getNombreJoursOuvres(): Number
    +getNombreJoursCalendaires(): Number
    +contient(date: Date): Boolean
    +chevauche(autre: Periode): Boolean
}

class NombreJours <<ValueObject>> {
    -valeur: Number
    +getValue(): Number
    +toInt(): int
    +add(autre: NombreJours): NombreJours
    +subtract(autre: NombreJours): NombreJours
    +isGreaterOrEqual(autre: NombreJours): Boolean
}

class TypeCongeVo <<ValueObject>> {
    -type: TypeConge
    +requiresManagerValidation(): Boolean
    +requiresRHValidation(): Boolean
    +getQuotaSpecial(): Number
}

enum TypeConge {
    CONGE_PAYEE
    RTT
    URGENCE_FAMILIALE
}

enum StatutConge {
    EN_ATTENTE
    APPROUVE
    REJETEE
    ANNULEE
}

enum StatutDemande {
    EN_ATTENTE_MANAGER
    MANAGER_APPROUVE
    EN_ATTENTE_RH
    RH_APPROUVEE
    REJETEE
}

interface CongeRepository {
    +save(conge: Conge): Promise<void>
    +findById(id: String): Promise<Conge|null>
    +findByEmployeeId(employeeId: String): Promise<Conge[]>
    +update(conge: Conge): Promise<void>
    +delete(id: String): Promise<void>
}

' Relationships
Employee "1" --> "*" Conge : has
Employee "1" --> "*" DemandeConge : makes
Conge "1" --> "1" DemandeConge : references
Conge "*" --> "1" TypeConge : has
Conge "*" --> "1" StatutConge : has
Conge "*" --> "1" Periode : uses
DemandeConge "*" --> "1" StatutDemande : has
NombreJours "*" --> "1" Employee : represents solde
TypeCongeVo --> TypeConge : wraps
CongeRepository --> Conge : manages

@enduml
